<resources>
    <string name="app_name">Quiz</string>
    <string name="hint_name">Nom</string>
    <string name="hint_firstname">Prénom</string>
    <string name="hint_job">Job/Entreprise</string>
    <string name="hint_year">Année de naissance</string>
    <string name="hint_postcode">Code postal</string>
    <string name="hint_phone">Téléphone</string>
    <string name="hint_email">Email</string>
    <string name="label_continue">Continuer</string>
    <string name="text_form">Complétez le formulaire et répondez au quiz pour tenter de gagner des cadeaux.</string>
    <string name="validation_empty">Champ obligatoire</string>
    <string name="text_quiz_about_start">Le quiz va commencer !</string>
    <string name="validation_email">Email invalide</string>
    <string name="label_save">Sauvegarde…</string>
    <string name="dialog_quiz_loading">Loading quiz…</string>
    <string name="title_quiz">Xebia Quiz</string>
    <string name="title_congrats">félicitation</string>
    <string name="text_pts">pts</string>
    <string name="text_score">Score de %1$s/%2$s</string>
    <string name="text_answer">Votre réponse : %1$s</string>
    <string name="text_answer_correct">Bonne réponse : %1$s</string>
    <string name="text_question">Q%1$s : %2$s</string>
</resources>
